add initial authorization

--- a/RemoteEducation/appsettings.json
+++ b/RemoteEducation/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=LV0952;Database=RemoteEducation;Trusted_Connection=True;MultipleActiveResultSets=true;"
   },
+  "Jwt": {
+    "SecretKey": "RemoteEducationKey",
+    "Issuer": "https://localhost:44328/",
+    "Audience": "https://localhost:44328/"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
