--- a/Auth/IdentityServer/IdentityServer/RE.IdentityServer.csproj
+++ b/Auth/IdentityServer/IdentityServer/RE.IdentityServer.csproj
@@ -12,6 +12,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
     <PackageReference Include="RE.Authorization.Library" Version="1.0.2" />
   </ItemGroup>
 
