moved filter and authorization in package

--- a/Auth/IdentityServer/RE.Authorization.Library/RE.Authorization.Library.csproj
+++ b/Auth/IdentityServer/RE.Authorization.Library/RE.Authorization.Library.csproj
@@ -4,11 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Vadym Ivanov</Authors>
-    <Version>1.0.2</Version>
+    <Version>1.0.3</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
+    <PackageReference Include="RE.Application.Library" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
