--- a/Auth/IdentityServer/IdentityServer/RE.IdentityServer.csproj
+++ b/Auth/IdentityServer/IdentityServer/RE.IdentityServer.csproj
@@ -13,7 +13,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
-    <PackageReference Include="RE.Authorization.Library" Version="1.0.2" />
+    <PackageReference Include="RE.Application.Library" Version="1.0.2" />
+    <PackageReference Include="RE.Authorization.Library" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
