--- a/RemoteEducationApi/RemoteEducation/RemoteEducation.csproj
+++ b/RemoteEducationApi/RemoteEducation/RemoteEducation.csproj
@@ -12,7 +12,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="RE.Authorization.Library" Version="1.0.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="9.2.0" />
+    <PackageReference Include="RE.Application.Library" Version="1.0.2" />
+    <PackageReference Include="RE.Authorization.Library" Version="1.0.3" />
   </ItemGroup>
 
   <ItemGroup>
